--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
       coverpage: true
     }
   </script>
+<script>
+  window.$docsify = {
+    loadSidebar: true,
+    subMaxLevel: 1
+  }
+</script>
+<script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js" data-ga="G-6391PZCFBR"></script>
