--- a/index.html
+++ b/index.html
@@ -32,12 +32,39 @@
   </script>
 <script>
   window.$docsify = {
-    loadSidebar: true,
-    subMaxLevel: 1
+    loadSidebar: true
   }
 </script>
-<script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+<script>
+  window.$docsify = {
+    loadSidebar: true,
+    subMaxLevel: 3
+  }
+</script>
 
+<script>
+  window.$docsify = {
+  count:{
+    countable: 1,
+    position: 'top',
+    margin: '10px',
+    float: 'right',
+    fontsize:'0.9em',
+    color:'rgb(90,90,90)',
+    language:'chinese',
+    localization: {
+      words: "",
+      minute: ""
+    },
+    isExpected: true
+  }
+}
+</script>
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/docsify-count@latest/dist/countable.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js" data-ga="G-6391PZCFBR"></script>
@@ -46,7 +73,6 @@
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-php.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.css">
-
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
   <script>
@@ -60,6 +86,7 @@
       distractionFreeMode: false
     })
   </script>
+
 
 
 </body>
