--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
+
+
 </head>
 
 <body>
@@ -17,6 +20,8 @@
 </body>
 <body>
 
+
+
   <script>
     window.$docsify = {
       name: '',
@@ -25,11 +30,8 @@
   </script>
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-  <script>
-    window.$docsify = {
-      coverpage: true
-    }
-  </script>
+
+
 <script>
   window.$docsify = {
     loadSidebar: true
@@ -37,32 +39,34 @@
 </script>
 <script>
   window.$docsify = {
+    coverpage: true,
     loadSidebar: true,
     subMaxLevel: 3
   }
-</script>
 
+</script>
 <script>
   window.$docsify = {
-  count:{
-    countable: 1,
-    position: 'top',
-    margin: '10px',
-    float: 'right',
-    fontsize:'0.9em',
-    color:'rgb(90,90,90)',
-    language:'chinese',
-    localization: {
-      words: "",
-      minute: ""
-    },
-    isExpected: true
+    // 完整配置参数
+    search: {
+      maxAge: 86400000,               // 过期时间，单位毫秒，默认一天
+      paths: [auto],                      // or 'auto'，匹配文件路径
+      placeholder: 'Type to search',  // 搜索提示框文字， 支持本地化，例子在下面
+      // placeholder: {
+      //   '/zh-cn/': '搜索',
+      //   '/': 'Type to search'
+      // },
+      noData: 'No Results!',          // 找不到结果文字提示，支持本地化，例子在下面
+      // noData: {
+      //   '/zh-cn/': '找不到结果',
+      //   '/': 'No Results'
+      // },
+      depth: 2,                       // 搜索标题的最大程级, 1 - 6
+    }，
   }
-}
 </script>
-
-
-
+<!-- 引入搜索模块 -->
+<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/docsify-count@latest/dist/countable.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
