--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   window.$docsify = {
     // 完整配置参数
     search: {
-      maxAge: 86400000,               // 过期时间，单位毫秒，默认一天
-      paths: [/],                      // or 'auto'，匹配文件路径
+      maxAge: 86400000,
+      paths: [auto],                      // or 'auto'，匹配文件路径
       placeholder: 'Type to search',  // 搜索提示框文字， 支持本地化，例子在下面
       // placeholder: {
       //   '/zh-cn/': '搜索',
