--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
     loadSidebar: true,
     subMaxLevel: 3
   }
-
+  window.$docsify = {
+  beian: {
+        ICP: "20225520",
+        NISMSP: {
+            number: "",
+            url: "https://icp.gov.moe/?keyword=20225520",
+            id: ""
+        },
+    },
+}
 </script>
 <script>
   window.$docsify = {
@@ -51,8 +60,8 @@
       depth: 2,
     }，
   }
-</script>
-<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/docsify-beian@latest/dist/beian.min.js"></script>
+</script>et/npm/docsify/lib/plugins/search.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/docsify-count@latest/dist/countable.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
@@ -77,7 +86,6 @@
     })
   </script>
 
-<a href="https://icp.gov.moe/?keyword=20225520" target="_blank">萌ICP备20225520号</a>
 
 
 
