--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="icon" href="./favicon.ico" type="image/x-icon"/>
+  <link rel="icon" href="https://ae05.alicdn.com/kf/H405047f5c13c4e4b9ab94390cdb7a0f2T.png" type="image/x-icon"/>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
 
 </head>
