--- a/ghp/index.html
+++ b/ghp/index.html
@@ -118,7 +118,7 @@
     <title>Huanx-GitHub 文件加速</title>
 </head>
 <body class="flex">
-<h1 style="margin-bottom: 50px"><img src="https://ae04.alicdn.com/kf/Hae9a8658390f4f26b63eae54b6deb638j.png" style="width: 1.5em;margin-right: .2em;vertical-align: bottom;">GitHub 文件加速</h1>
+<h1 style="margin-bottom: 50px"><img src="https://ae04.alicdn.com/kf/Hae9a8658390f4f26b63eae54b6deb638j.png" style="width: 1.5em;margin-right: .2em;vertical-align: bottom;">Huanx-GitHub 文件加速</h1>
 <form action="./" method="get" style="padding-bottom: 40px" target="_blank" class="flex" onsubmit="toSubmit(event)">
     <label class="block" style="width: fit-content">
         <input class="block url" name="q" type="text" placeholder="键入Github文件链接"
@@ -135,8 +135,5 @@
         <p>分支文件：https://github.com/hunshcn/project/blob/master/filename</p>
     </div>
 </form>
-<p style="position: sticky;top: calc(100% - 2.5em);">项目基于Cloudflare Workers，开源于GitHub <a style="color: #3294ea"
-                                                                                         href="https://github.com/hunshcn/gh-proxy">hunshcn/gh-proxy</a>
-</p>
 </body>
 </html>
